Final frontend fixes: UI, scroll, code editor & ready for Vercel deployment

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Nexora - AI powered code explanation tool by AnyaLabs" />
+    <title>Nexora | By AnyaLabs</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
-  <body>
+  <body class="bg-gradient-to-tr from-gray-900 via-purple-900 to-gray-800 text-white">
     <div id="root"></div>
+
+    <!-- Vite app mounting -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
