--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Nexora - AI powered code explanation tool by AnyaLabs" />
-    <title>Nexora | By AnyaLabs</title>
+    <meta name="description" content="Nexora - AI powered code explanation tool by Aanya Labs" />
+    <title>Nexora | By Aanya Labs</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body class="bg-gradient-to-tr from-gray-900 via-purple-900 to-gray-800 text-white">
