✨ Added clear button with toast feedback, undo logic, and styled notifications

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,12 @@
     <meta name="description" content="Nexora - AI powered code explanation tool by Aanya Labs" />
     <title>Nexora | By Aanya Labs</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- ✅ Google Fonts (Poppins + Inter) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="bg-gradient-to-tr from-gray-900 via-purple-900 to-gray-800 text-white">
     <div id="root"></div>
